working out the layout bugs

--- a/public/style-alt.css
+++ b/public/style-alt.css
@@ -12,7 +12,10 @@ body {
 }
 
 :root {
+    --game-border: 20px;
+    --game-border-offset: calc(var(--game-border: 20px) * 2);
     --game-height: 100vh;
+    --game-screen-width: 100vw;
     --ground-height: calc(var(--game-height) - 87vh);
     --ground-top: 80vh;
     /* --sprite-start-pos:; */
@@ -31,30 +34,38 @@ body {
 
 #game-area {
     padding: 5vw 0vw 5vw 5vw;
-    height: 100vh;
-    width: calc(100vw - 100vh);
-    flex: 0 0 40%;
+    height: var(--game-height);
+    width: calc(var(--game-screen-width) - var(--game-height));
+    /* flex: 0 0 40%; */
     display: flex;
     align-content: stretch;
     flex-direction: column;
 }
 
 #game-field {
-    height: 100vh;
-    width: 100vh;
-    max-width: 100vh;
-    flex: 0 0 50%;
+    height: calc(var(--game-height) - var(--game-border-offset));
+    width: calc(var(--game-height) - var(--game-border-offset));
+    min-width: calc(var(--game-height) - var(--game-border-offset));
+    min-height: calc(var(--game-height) - var(--game-border-offset));
+    /* max-width: calc(var(--game-height) - var(--game-border-offset));
+    max-height: calc(var(--game-height) - var(--game-border-offset)); */
+    /* flex: 0 0 50%; */
     /* float: left; */
     align-items: center;
     justify-content: center;
+    border: var(--game-border) black solid;
+    overflow: hidden;
+    display: flex;
+    /* position: relative; */
 }
 
 .game-grid {
-    /* background-color: darkgrey; */
-    border: 20px black solid;
+    /* height: var(--game-height);
+    width: var(--game-height);
+    min-width: var(--game-height);
+    min-height: var(--game-height); */
     display: flex;
-    position: relative;
-    overflow: hidden;
+    /* position: relative; */
 }
 
 /* .game-screen-square {
@@ -64,6 +75,8 @@ body {
 
 .row {
     /* border: 1px blue solid; */
+    /* display: flex; */
+    /* align-self: stretch; */
     width: 100%;
     /* height: 20%; */
 }
